--- a/resources/views/pages/pdf/formulir.html
+++ b/resources/views/pages/pdf/formulir.html
@@ -43,7 +43,7 @@
                 <th class="logoth">
                     <table style="text-align: left;">
                         <tr>
-                            <td>Nomor Dokument</td>
+                            <td>Nomor Dokumen</td>
                         </tr>
                         <tr>
                             <td>Tanggal Pengesahan</td>
@@ -90,7 +90,7 @@
         <div style="text-align: right;">Jepara, &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
         <table style="text-align: left;">
             <tr>
-                <td>Yang Bertanda tangnan dibawah ini :</td>
+                <td>Yang Bertanda tangan dibawah ini :</td>
                 <td></td>
                 <td></td>
             </tr>
@@ -141,7 +141,7 @@
             potong disini
             ...................................................................................................................................
         </h6>
-
+<br>
         <table class="logotable">
             <tr class="logotr">
                 <th class="logoth">
@@ -154,7 +154,7 @@
                 <th class="logoth">
                     <table style="text-align: left;">
                         <tr>
-                            <td>Nomor Dokument</td>
+                            <td>Nomor Dokumen</td>
                         </tr>
                         <tr>
                             <td>Tanggal Pengesahan</td>
@@ -200,7 +200,7 @@
 
         <table style="text-align: left;">
             <tr>
-                <td>Yang Bertanda tangnan dibawah ini :</td>
+                <td>Yang Bertanda tangan dibawah ini :</td>
                 <td></td>
                 <td></td>
             </tr>
